Fixes missing colors for components using Bootstrap 4 variable names

--- a/scss/themes/_chat.scss
+++ b/scss/themes/_chat.scss
@@ -64,6 +64,14 @@
   }
 }
 
+.list-group-item-danger:not(.active) {
+  &:hover,
+  &:focus {
+    color: color-contrast($danger);
+  }
+  color: color-contrast($danger);
+}
+
 .list-group-action.list-group-item {
   &:hover,
   &:focus {
